--- a/20220304HTML/homworkstyle.css
+++ b/20220304HTML/homworkstyle.css
@@ -17,7 +17,7 @@ h2::after {
 
 .wrap {
   margin-top: 12px;
-  width: 960px;
+  width: 1110px;
   display: flex;
   margin-left: auto;
   margin-right: auto;
@@ -25,19 +25,27 @@ h2::after {
 }
 
 .item {
-  width: 300px;
+  width: 350px;
   margin: 10px;
 }
 
 .item img {
-  height: 50%;
   width: 100%;
-  border-radius: 12px;
+  border-radius: 6px;
+  cursor: pointer;
 }
+
+.item h3 {
+  cursor: pointer;
+}
+/* 
+.item h3:hover {
+  color: red;
+} */
 
 span {
   margin-top: 12px;
-  font-size: 5px;
+  font-size: xx-small;
   font-weight: 100;
   color: rgb(165, 163, 163);
   display: block;
@@ -49,10 +57,14 @@ span {
   font-weight: 300;
   border-radius: 3px;
   padding: 2px 20px;
-  margin-top: -50px;
   background-color: red;
   color: white;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
+
+/* .button:hover {
+  background-color: rgb(145, 20, 20);
+  cursor: pointer;
+} */
