--- a/20220309 HTML&CSS/style.css
+++ b/20220309 HTML&CSS/style.css
@@ -8,13 +8,13 @@
 
 /* 主軸 vs 交叉軸 */
 
-.wrap {
+/* .wrap {
   
-  /* width: 960px; */
+  width: 960px;
   height: 500px;
   background-color: gray;
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   margin: auto;
 }
 .item {
@@ -32,7 +32,9 @@
 
 .i2{
   background-color: blue;
-}
+} */
+
+/* -------------------- */
 
 /* box-sizing example */
 /* .box {
@@ -48,23 +50,35 @@
 /* ------------------------------------------------- */
 
 /* box-sizeing練習 */
-/* .container {
+.wrap {
+  margin: 0 auto;
   display: flex;
-  width: 960px;
+  width: 500px;
+  height: 500px;
   background-color: aquamarine;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+  align-items:flex-start;
+
 }
 
 .item {
-  width: 260px;
-  height: 300px;
+  width: 100px;
+  height: 100px;
   margin: 15px;
   border: 3px solid black;
-  padding: 12px;
   background-color: brown;
   text-align: center;
-} */
+}
 
+.i2{
+  height: 200px;
+  align-self: flex-end;
+}
+
+.i3{
+  height: 150px;
+  
+}
 /* --------------------------------------------------- */
 
 /* 偽元素 */
