--- a/20220309 HTML&CSS/homework/header.css
+++ b/20220309 HTML&CSS/homework/header.css
@@ -1,20 +1,26 @@
 header {
   width: 100%;
-  /* background-color: aquamarine; */
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 header .wrap {
   width: 100%;
+  background-color: black;
 }
 
 header .wrap .header-top {
+  width: 280px;
   height: 40px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   background-color: black;
   align-items: center;
   font-size: 87.5%;
   text-align: center;
+  position: fixed;
+  right: 0;
 }
 
 header .wrap .header-top img {
@@ -22,7 +28,7 @@ header .wrap .header-top img {
 }
 
 .icon {
-  padding-right: 30px;
+  padding-right: 40px;
   border-right: 1px solid white;
 }
 
@@ -33,10 +39,12 @@ header .wrap .header-top a {
 }
 
 header .wrap .header-bottom {
+  position: relative;
+  top: 40px;
   width: 100%;
   height: 80px;
   background-color: #fff;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
 }
 
@@ -93,4 +101,87 @@ header .wrap .header-bottom .button a {
   padding: 13px 20px;
   font-size: 14px;
   text-align: center;
+}
+
+.emailAdress_area {
+  width: 100%;
+  height: 700px;
+  background-color: aquamarine;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  margin-top: 120px;
+}
+
+/* leftArea */
+
+.emailAdress_area .background {
+  width: 90%;
+  display: flex;
+  margin: 0 auto;
+}
+
+.emailAdress_area .background .text {
+  width: 50%;
+  padding-right: 50px;
+}
+
+.emailAdress_area .background .text h2 {
+  font-size: 250%;
+  line-height: 60px;
+  font-weight: 700;
+}
+
+.emailAdress_area .background .text h2 span {
+  display: block;
+  color: goldenrod;
+}
+
+.emailAdress_area .background .text p {
+  padding-right: 30px;
+  font-weight: bold;
+  font-size: 106.25%;
+  letter-spacing: 1px;
+  line-height: calc(6px + 2ex + 6px);
+  margin-top: 35px;
+  margin-bottom: 60px;
+}
+
+/* rightArea */
+
+.emailAdress_area .background .pic1 {
+  width: 50%;
+}
+.emailAdress_area .background .pic1 img {
+  width: 481px;
+  height: 350px;
+}
+
+.emailSubmit {
+  display: flex;
+  align-items: flex-end;
+}
+
+.emailSubmit input {
+  width: 300px;
+  height: 50px;
+}
+
+.emailSubmit .button {
+  width: 150px;
+  height: 50px;
+  margin-left: 20px;
+}
+
+.emailSubmit .button a {
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: rgb(29, 29, 255);
+  border-radius: 30px;
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  line-height: 50px;
 }
