--- a/homework/header.css
+++ b/homework/header.css
@@ -20,6 +20,7 @@ header {
   top: 0;
   left: 0;
   box-shadow: 0 -20px 10px black;
+  z-index: 5;
 }
 
 header .wrap {
@@ -444,4 +445,161 @@ header .wrap .header-bottom .button a {
 .popularBrand .wrap .brandInformation .imgArea img {
   padding: 30px;
   width: 100%;
+}
+
+.demoInformation {
+  width: 100%;
+  height: 400px;
+  background-color: rgb(248, 183, 183);
+}
+
+.demoInformation .wrap {
+  width: 100%;
+  height: 400px;
+  background-color: rgb(80, 83, 248);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 40px;
+}
+
+.demoInformation .wrap h2 {
+  font-size: 42px;
+  color: #fff;
+}
+
+.demoInformation .wrap h2 .numBackground {
+  position: relative;
+  opacity: 0.9;
+}
+
+.demoInformation .wrap h2 .numBackground::before {
+  content: "";
+  width: 130px;
+  border: 10px solid rgba(151, 151, 224, 0.9);
+  left: -5px;
+  top: 40%;
+  position: absolute;
+  z-index: -1;
+}
+
+.demoInformation .wrap a {
+  display: inline-block;
+  width: 25%;
+  height: 45px;
+  background-color: cornflowerblue;
+  text-align: center;
+  color: white;
+  line-height: 45px;
+  border-radius: 20px;
+}
+
+footer {
+  width: 100%;
+  height: 800px;
+  background-color: rgb(239, 243, 189);
+}
+
+footer .footerLink {
+  width: 90%;
+  height: 700px;
+  /* background-color: rgb(239, 243, 189); */
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+footer .footerLink .wrap {
+  width: 100%;
+  height: 596px;
+  border-top: 2px solid rgb(250, 149, 149);
+  border-bottom: 2px solid rgb(250, 149, 149);
+}
+footer .footerLink .wrap .linkList {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
+}
+
+footer h4 {
+  font-size: 18px;
+  color: rgb(255, 176, 176);
+  font-weight: 400;
+}
+footer ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+  margin-top: 50px;
+}
+
+footer ul li {
+  line-height: 2em;
+}
+
+footer ul li a:hover {
+  color: rgb(248, 90, 90);
+}
+
+footer .COVID19Solution {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+footer .COVID19Solution a {
+  display: inline-block;
+  width: 200px;
+  height: 40px;
+  background-color: #fff;
+  text-align: center;
+  line-height: 40px;
+  color: black;
+}
+
+footer .footerAbout {
+  width: 100%;
+  height: 90px;
+}
+
+footer .wrapdown {
+  width: 90%;
+  height: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+}
+
+footer .wrapdown .footerInformation {
+  width: 33.33333%;
+}
+
+footer .wrapdown .footerInformation a {
+  padding: 0 5px;
+}
+
+.middle {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+
+footer .wrapdown .iconLink {
+  display: flex;
+  width: 33.33333%;
+  justify-content: space-between;
+}
+
+footer .wrapdown p {
+  width: 33.33333%;
+  text-align: right;
+  font-size: 16px;
+  line-height: 1.5em;
 }
