--- a/homework/style.css
+++ b/homework/style.css
@@ -99,10 +99,15 @@ nav ul {
 nav ul li {
   margin: 2px;
 }
+
 nav ul li a {
   text-decoration: none;
   color: black;
   font-size: 15px;
+}
+
+nav ul li a:hover {
+  color: rgb(76, 76, 245);
 }
 
 header .wrap .header-bottom .button {
