--- a/homework3/work1/style.css
+++ b/homework3/work1/style.css
@@ -220,7 +220,7 @@ section {
   position: relative;
   z-index: 3;
   top: 150px;
-  left: 35s0px;
+  left: 250px;
   box-sizing: border-box;
   padding: 20px;
 }
