--- a/homework3/work1/style.css
+++ b/homework3/work1/style.css
@@ -15,11 +15,8 @@ section {
   margin: auto;
 }
 
-/* mainTitle left */
-
 .mainTitle {
   margin-top: 20px;
-
   display: inline-block;
   box-sizing: border-box;
 }
@@ -103,7 +100,7 @@ section {
 }
 
 .contentText .text h4 {
-  display: inline-block;
+  display: inline-block; /* width: fit-content; */
   padding: 0 5px;
   background-color: black;
   color: white;
